# Second-project

./: .gitignore  CMakeLists.txt  MusicManager.cpp  MusicManager.h  MusicPlayer.cpp  MusicPlayer.h  Song.cpp  Song.h  UI.cpp  UI.h  button.cpp  button.h  def.h  drawAlpha.h  main.cpp  project.md  txt.cpp  txt.h
需求文档/: 111需求文档.xlsx  MRD_Rei82.md  my需求文档.xlsx  凉雨需求文档.xlsx  小林需求文档.xlsx  火豆需求文档.xlsx  需求文档模板-拿破仑崴脚猫2.xlsx
